samples/_failures_safe/1761149541_e2ef89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb666ae9.c: In function ‘main’:
./samples/SAFE/__tmp_eb666ae9.c:151:21: error: expected expression at end of input
  151 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_eb666ae9.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb666ae9.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb666ae9.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb666ae9.c:151:21: error: expected declaration or statement at end of input
